--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
 
             <!-- รูปโปรไฟล์ -->
             <div class="profile-img">
-                <img src="images/S__10682375.jpg" alt="profile image">
+                <img src="S__10682375.jpg" alt="profile image">
             </div>
 
             <h1>ประวัติส่วนตัว</h1>
@@ -39,4 +39,5 @@
     </div>
 
 </body>
+
 </html>
